# softmotion

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
ae/: README.md  motion_bridge.jsx
configs/data/: autolabel.yaml  extract.yaml  scrape.yaml  sources.example.txt
configs/finetune/: locateanything_finetune.yaml  sam3_finetune.yaml
configs/morph/: classical_cpu.yaml  flow_cpu.yaml
docs/: ARCHITECTURE.md  DATA.md  FINETUNING.md  GPU_SETUP.md  LICENSING.md  MAC_INFERENCE.md
outputs/: cli_auto.json  example_merge.json
outputs/chain/: chain.json
outputs/smoke/: merge_classical.json  merge_flow.json
scripts/: bootstrap_dirs.py  download_models.py  setup_gpu.sh  setup_mac.sh  smoke_test.py
src/motion/: __init__.py  cli.py  config.py  device.py  logging.py
src/motion/correspondence/: __init__.py  base.py  builder.py  contour.py  keypoints.py  mesh.py
src/motion/data/: __init__.py  autolabel.py  dataset_la.py  dataset_sam3.py  extract_frames.py  scrape.py
src/motion/io/: __init__.py  images.py  masks.py  video.py
src/motion/morph/: __init__.py  base.py  classical.py  compositor.py  easing.py  optical_flow.py  registry.py
src/motion/perception/: __init__.py  base.py  heuristic.py  locateanything_cpp.py  locateanything_localizer.py  registry.py  sam3_segmenter.py
src/motion/pipeline/: __init__.py  manifest.py  merge.py
src/motion/train/: __init__.py  convert_to_gguf.py  finetune_locateanything.py  finetune_sam3.py
tests/: conftest.py  test_correspondence.py  test_datasets.py  test_device.py  test_easing.py  test_manifest.py  test_morph_classical.py  test_optical_flow.py  test_pipeline.py  test_regressions.py
